--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon src/server.js",
-    "start": "NODE_ENV=production node src/server.js"
+    "build": "npm install",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "author": "arkas",
   "license": "ISC",
